fix wfprev-441.442 (#621).  display yyyy/yy as fiscal year in confirmation dialog. Left align the text (#622)

--- a/client/wfprev-war/src/main/angular/src/app/components/confirmation-dialog/confirmation-dialog.component.scss
+++ b/client/wfprev-war/src/main/angular/src/app/components/confirmation-dialog/confirmation-dialog.component.scss
@@ -7,7 +7,7 @@
   .dialog-content {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
   
     .icon-and-text {
       display: flex;
